--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html xmlns:height="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,14 +56,13 @@
 <!-- END OF NAVBAR -->
 
 
-
 <div id="my-id-screen-1" class="pos-a my-full-screen">
-    <div class="container">
+    <div class="container"  style="z-index: 2; height: 100vh">
         <div class="my-1-screen-text-div">
-            <h1 class="my-font-MS-light my-font-size-medium my-color-blue">
+            <h1 class="my-font-MS-light my-font-size-medium my-font-size-large-fix-mobile-title-1-screen-1 my-color-blue">
                 We helps you
             </h1>
-            <h1 class="my-font-MS-semibold my-font-size-large my-color-blue">
+            <h1 class="my-font-MS-semibold my-font-size-large my-font-size-large-fix-mobile-title-1-screen-2 my-color-blue">
                 Create<br>
                 Beauty
             </h1>
@@ -79,24 +78,29 @@
         <div class="container" style="z-index: 2;">
             <div class="row my-title-div-2screen-Trusted">
                 <div class="col-lg-8 col-sm-12 ml-auto">
-                    <h1 class="my-font-MS-semibold my-font-size-large my-color-light">Trusted</h1>
+                    <h1 class="my-font-MS-semibold my-font-size-large my-font-size-large-fix-mobile my-color-light">Trusted</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-sm-12 ml-auto">
-                    <h1 class="my-font-MS-regular my-font-size-small-m my-color-light">Many of the world’s most dynamic companies and individuals find JetBrains tools make them more creative and effective.</h1>
+                    <h1 class="my-font-MS-regular my-font-size-small-m my-color-light">Many of the world’s most dynamic
+                        companies <br>and individuals find JetBrains tools make them<br> more creative and effective.</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-sm-12 ml-auto">
                     <!-- КОСТИЛЬ С MARGIN Внизу-->
-                    <h1 class="my-font-MS-medium my-font-size-medium my-color-light" style="margin-top: 7vh">What Developers Say</h1>
+                    <h1 class="my-font-MS-medium my-font-size-medium my-color-light" style="margin-top: 7vh">What
+                        Developers Say</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-12 ml-auto">
                     <p class="my-font-size-small-m my-font-MS-light my-color-light">
-                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell’s given name, scholars disagree about hether or not she can be identified as being strictly based upon Liddell.
+                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Although she shares her name with Alice Liddell’s given name, scholars disagree about hether or
+                        not she can be identified as being strictly based upon Liddell.
                     </p>
                     <p class="my-font-size-small-m my-font-MS-semibold my-color-light">
                         David Starr,<br>
@@ -105,12 +109,18 @@
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <p class="my-font-size-small-m my-font-MS-light my-color-light">
-                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
                     </p>
                     <p class="my-font-size-small-m my-font-MS-semibold my-color-light">
                         David Starr,<br>
                         Healthwise
                     </p>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 15vh">
+                <div class="col-12 my-font-size-large-s my-color-light my-font-MS-semibold my-fix-our-works my-font-size-large-fix-mobile my-our-works">
+                    Our works
                 </div>
             </div>
         </div>
@@ -118,40 +128,31 @@
 
     <div id="my-id-screen-3">
         <div class="my-black-div-between-2-and-3 pos-a"></div>
-
-
-        <div class="container my-shadow my-big-div-in-3-screen"  style="width: 70vw"><!-- костиль с позицыями -->
+        <div class="container my-shadow my-big-div-in-3-screen my-block-960px" style="z-index: 2"><!-- костиль с позицыями -->
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
                     <div class="my-text-div">
-                        <p class="my-head-text">P-HEAD</p>
-                        <h3>HEADER</h3>
-                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
-                            while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
-                            Although she shares her name with Alice Liddell's given name, scholars disagree about
-                            whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        <h3 class="my-font-size-medium my-color-black my-font-MS-regular">JUNE</h3>
+                        <p class="my-font-size-small-m my-color-black my-font-MS-light">In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-8 col-sm-12 mydiv " style="background: #b8ee30">
-                    <img src="example-div-img.png" class="myimg">
+                <div class="col-lg-8 col-sm-12 mydiv">
+                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0&amp;showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                    <!--<img src="example-div-img.png" class="myimg">-->
                 </div>
             </div>
 
             <div class="row">
 
-                <div class="col-lg-8 col-sm-12 mobile-buttom mydiv" style="background: #ee2927; right: 0">
+                <div class="col-lg-8 col-sm-12 mobile-buttom mydiv">
                     <img src="example-div-img.png" class="myimg">
                 </div>
 
                 <div class="col-lg-4 col-sm-12 mobile-top">
                     <div class="my-text-div">
-                        <p class="my-head-text">P-HEAD</p>
-                        <h3>HEADER</h3>
-                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
-                            while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
-                            Although she shares her name with Alice Liddell's given name, scholars disagree about
-                            whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        <h3 class="my-font-size-medium my-color-black my-font-MS-regular">JUNE</h3>
+                        <p class="my-font-size-small-m my-color-black my-font-MS-light">In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.
                         </p>
                     </div>
                 </div>
@@ -161,19 +162,15 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
                     <div class="my-text-div">
-                        <p class="my-head-text">P-HEAD</p>
-                        <h3>HEADER</h3>
-                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
-                            while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
-                            Although she shares her name with Alice Liddell's given name, scholars disagree about
-                            whether or not she can be identified as being strictly based upon Liddell. Carroll</p>
+                        <h3 class="my-font-size-medium my-color-black my-font-MS-regular">JUNE</h3>
+                        <p class="my-font-size-small-m my-color-black my-font-MS-light">In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-8 col-sm-12 mydiv" style="background: #b8ee30">
+                <div class="col-lg-8 col-sm-12 mydiv">
                     <img src="example-div-img.png" class="myimg">
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -190,9 +187,14 @@
 <div class="s1-f1"></div>
 <div class="s1-f2"></div>
 <div class="s1-f3"></div>
+
 <div class="s2-f2"></div>
 <div class="s2-f3"></div>
 <div class="s2-f1"></div>
+
+<div class="s3-f1"></div>
+<div class="s3-f2"></div>
+
 
 <!-- JavaScript -->
 
