--- a/index.htm
+++ b/index.htm
@@ -172,6 +172,7 @@
                 </div>
             </div>
         </div>
+        <div class="my-black-div-between-2-and-3 pos-a" style="bottom: 0px"></div>
     </div>
 
     <div id="my-id-screen-4" class="full_screen">
