--- a/index.htm
+++ b/index.htm
@@ -29,23 +29,21 @@
     <div class="container">
 
         <div class="my-logo-fix"><!--Костиль-->
-            <a class="navbar-brand" href="#" style="text-align: center">jolla</a>
+            <a class="logo-header my-color-blue my-font-MS-bold my-font-size-medium" href="#"
+               style="text-align: center">.jolla</a>
         </div>
 
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto my-ul-fix">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item ">
+                    <a class="nav-link link-header my-font-MS-regular my-font-size-regulary-s" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link link-header my-font-MS-regular my-font-size-regulary-s" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">DisabledDisabled</a>
+                    <a class="nav-link link-header my-font-MS-regular my-font-size-regulary-s" href="#">Link</a>
                 </li>
             </ul>
         </div>
@@ -72,6 +70,7 @@
     </div>
 
     <div class="s1-f1"></div>
+    <div class="s1-f2"></div>
 
     <!--
     <div class="s1-f2"></div>
@@ -84,7 +83,6 @@
 
 
 <div id="my-id-screen-after-1">
-
 
 
     <div id="my-id-screen-2" style="">
@@ -129,7 +127,6 @@
         </div>
 
 
-
     </div>
 
 
@@ -163,7 +160,6 @@
                                 height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0"
                                 allowfullscreen></iframe>
                     </div>
-                    <!--<img src="example-div-img.png" class="myimg">-->
                 </div>
             </div>
 
@@ -192,7 +188,8 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <div style="margin-top: 10px; margin-bottom: 10px; text-align: center">
-                        <button type="button" class="btn btn-outline-secondary"><font class="my-font-MS-regular my-font-size-small-m">more</font></button>
+                        <button type="button" class="btn btn-outline-secondary"><font
+                                class="my-font-MS-regular my-font-size-small-m">more</font></button>
                     </div>
                 </div>
             </div>
@@ -271,7 +268,8 @@
                 </div>
             </div>
             <div class="row" style="height: 200px">
-                <div class="col-lg-3 col-sm-6" style="background: cadetblue">
+
+                <div class="col-lg-3 col-sm-6" style="background: cadetblue;">
                 </div>
                 <div class="col-lg-3 col-sm-6" style="background: #31a065">
                 </div>
@@ -295,14 +293,23 @@
         <div id="my-id-screen-6" class="full_screen">
             <div class="container" style="padding-top: 4vh">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-12 footer-1">
-                        <a class="link my-color-black-l my-font-MS-bold my-font-size-medium" href="#">.jolla</a>
+                    <div class="col-lg-12 col-sm-12 footer-1">
+                        <a class="link-footer my-color-black-l my-font-MS-bold my-font-size-medium" href="#">.jolla</a>
                     </div>
-                    <div class="col-lg-6 col-sm-12 footer-2">
-                        <a class="link my-color-black-l" href="#">Features</a>
-                        <a class="link my-color-black-l" href="#">Features</a>
-                        <a class="link my-color-black-l" href="#">Features</a>
-                        <a class="link my-color-black-l" href="#">Features</a>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12 footer-2">
+                        <a class="link-footer my-color-black-l" href="#">About Us</a>
+                        <a class="link-footer my-color-black-l" href="#">Affiliates</a>
+                        <a class="link-footer my-color-black-l" href="#">Careers</a>
+                        <a class="link-footer my-color-black-l" href="#">Privacy Policy</a>
+                        <a class="link-footer my-color-black-l" href="#">Terms of Service </a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12 footer-2">
+                        <a class="link-footer my-color-black-l" href="#">Copyright © 2017</a>
                     </div>
                 </div>
             </div>
