--- a/index.htm
+++ b/index.htm
@@ -21,9 +21,9 @@
 
 <nav class="navbar navbar-toggleable-sm my-color-black navbar-light sticky-top">
 
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler navbar-toggler-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: 0px">
+        <p class="my-font-MS-bold my-color-blue">☰</p>
     </button>
 
     <div class="container">
@@ -121,7 +121,7 @@
         </div>
 
 
-        <div class="photo-team-screen-2" style="z-index: 0;">
+        <div class="photo-team-screen-2">
             <div class="my-grad"></div>
             <img src="photo-team-screen-2.png" class="myimg">
         </div>
@@ -130,7 +130,7 @@
     </div>
 
 
-    <div id="my-id-screen-3" style="position: relative">
+    <div id="my-id-screen-3">
 
         <div class="s3-f1" style="z-index: 0"></div>
 
@@ -188,8 +188,9 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <div style="margin-top: 10px; margin-bottom: 10px; text-align: center">
-                        <button type="button" class="btn btn-outline-secondary"><font
-                                class="my-font-MS-regular my-font-size-small-m">more</font></button>
+                        <button type="button" class="btn btn-outline-secondary my-font-MS-regular my-font-size-small-m">
+                            more
+                        </button>
                     </div>
                 </div>
             </div>
@@ -291,7 +292,7 @@
         </div>
 
         <div id="my-id-screen-6" class="full_screen">
-            <div class="container" style="padding-top: 4vh">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-sm-12 footer-1">
                         <a class="link-footer my-color-black-l my-font-MS-bold my-font-size-medium" href="#">.jolla</a>
