--- a/index.htm
+++ b/index.htm
@@ -123,7 +123,7 @@
 
         <div class="photo-team-screen-2">
             <div class="my-grad"></div>
-            <img src="photo-team-screen-2.png" class="myimg">
+            <img src="src/photo-team-screen-2.png" class="myimg">
         </div>
 
 
@@ -207,7 +207,7 @@
         <div class="container" style="z-index: 2; padding-bottom: 14vh">
             <div class="row ">
                 <div class="col-lg-4 col-sm-12 ml-auto pos-a man-div" style="margin-top: 100px">
-                    <img src="man.png" class="man-img">
+                    <img src="src/man.png" class="man-img">
                 </div>
                 <div class="col-lg-8 col-sm-12 ml-auto my-title-div-4screen-Trusted">
                     <h1 class="my-font-MS-bold my-font-size-large my-font-size-large-fix-mobile my-color-light">
@@ -320,7 +320,7 @@
 
     <!-- JavaScript -->
 
-    <script src="JS/script.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
             integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
             crossorigin="anonymous"></script>
